Fix options alignment

--- a/Chrome/chrome_shared.css
+++ b/Chrome/chrome_shared.css
@@ -22,9 +22,6 @@ body {
     margin: 0;
     font-family: 'Lucida Grande', sans-serif;
     min-width: 576px;
-    padding-bottom: 20px;
-    padding-top: 55px;
-    margin-left: 155px;
     line-height: 28px;
     background: #e5e5e5;
 }
