--- a/Chrome/widgets.css
+++ b/Chrome/widgets.css
@@ -355,7 +355,6 @@ label {
     bottom: 0;
     background: #fff;
     height: 45px;
-    width: 100%;
 }
 
 #cover {
